[package]
name = "stars-forks-notify"
version = "0.1.1"
authors = ["InfinyOn Team <team@infinyon.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.13"

[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
