[package]
name = "labs-stars-forks-changes-sm"
version = "0.1.1"
authors = ["InfinyOn Team <team@infinyon.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
